--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,20 +32,13 @@ jobs:
     # we want our tests to take place on a MacOS machines as opposed to a Docker image
     docker:
       - image: circleci/node:10.15.3
-    working_directory: ~/repo
+    working_directory: .
     steps:
       # checkout - a CircleCI built in command which is responsible for checking
       # out the project's source code into the Job's working_directory we discussed above
       - checkout
       - run: npm install
       - run: npm test
-  jobs:
-    - aws-code-deploy/deploy:
-        application-name: simple-node-app
-        deployment-group: myDeploymentGroup
-        service-role-arm: myDeploymentGroupRoleARN
-        bundle-bucket: myApplicationS3Bucket
-        bundle-key: myS3BucketKey
 #what is the prupose of orbs:
 #what is the purpose of workflows:
 #what is the purpose of workflow
