--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,22 +4,19 @@ version: 2
 # complex CI processes, but for our purposes, a single job task is all we need
 
 # orbs:
-#   aws-code-deploy: circleci/aws-ecr@4.0.1
-#   workflows:
-#     build_and_push_image:
-#       jobs:
-#         - aws-ecr/build-and-push-image:
-#             account-url: AWS_ECR_ACCOUNT_URL_ENV_VAR_NAME #how to know the url of my ECR account
-#             aws-access-key-id: ACCESS_KEY_ID_ENV_VAR_NAME
-#             aws-secret-access-key: SECRET_ACCESS_KEY_ENV_VAR_NAME
-#             context: myContext
-#             create-repo: true
-#             dockerfile: Dockerfile
-#             path: . #not sure about how to indicate the path
-#             profile-name: myProfileName
-#             region: AWS_REGION_ENV_VAR_NAME
-#             repo: theNameOfMyECR
-#             tag: 'notag'
+#   aws-ecr: circleci/aws-ecr@6.7.1
+#   aws-ecs: circleci/aws-ecs@1.1.0
+# workflows:
+#   build-and-deploy:
+#     jobs:
+#       - aws-ecr/build_and_push_image:
+#         repo: '${AWS_RESOURCE_NAME_PREFIX}'
+#         tag: '${CIRCLE_SHA1}'
+#       - aws-ecs/deploy-service-update:
+#           requires:
+#             - aws-ecr/build_and_push_image
+#           family: 'basic-nodejs-app-service'
+#           cluster: 'basic-nodejs-app-cluster'
 jobs:
   # The build section defines the name for the job. So in this case, the name of
   # the job is simply build
@@ -32,7 +29,7 @@ jobs:
     # we want our tests to take place on a MacOS machines as opposed to a Docker image
     docker:
       - image: circleci/node:10.15.3
-    working_directory: .
+    working_directory: ~/project
     steps:
       # checkout - a CircleCI built in command which is responsible for checking
       # out the project's source code into the Job's working_directory we discussed above
