--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,39 +3,41 @@ version: 2
 # for CI process. CircleCI allows you to configure multiple jobs for more
 # complex CI processes, but for our purposes, a single job task is all we need
 
-# orbs:
-#   aws-ecr: circleci/aws-ecr@6.7.1
-#   aws-ecs: circleci/aws-ecs@1.1.0
-# workflows:
-#   build-and-deploy:
-#     jobs:
-#       - aws-ecr/build_and_push_image:
-#         repo: '${AWS_RESOURCE_NAME_PREFIX}'
-#         tag: '${CIRCLE_SHA1}'
-#       - aws-ecs/deploy-service-update:
-#           requires:
-#             - aws-ecr/build_and_push_image
-#           family: 'basic-nodejs-app-service'
-#           cluster: 'basic-nodejs-app-cluster'
-jobs:
-  # The build section defines the name for the job. So in this case, the name of
-  # the job is simply build
-  build:
-    # The docker section defines an executor for the build process. And executor
-    # is a place where build steps will occur. By specifying docker, we are telling
-    # Circle that we want our build steps to take place inside of a Docker container.
-    # For comparison sake, if we were building an iOS application instead of a node.js
-    # application, we would replace 'docker' with macos. This would tell Circle that
-    # we want our tests to take place on a MacOS machines as opposed to a Docker image
-    docker:
-      - image: circleci/node:10.15.3
-    working_directory: ~/project
-    steps:
-      # checkout - a CircleCI built in command which is responsible for checking
-      # out the project's source code into the Job's working_directory we discussed above
-      - checkout
-      - run: npm install
-      - run: npm test
+orbs:
+  aws-ecr: circleci/aws-ecr@6.7.1
+  aws-ecs: circleci/aws-ecs@1.1.0
+
+workflows:
+  unit-test:
+    jobs:
+      # The build section defines the name for the job. So in this case, the name of
+      # the job is simply build
+      build:
+        # The docker section defines an executor for the build process. And executor
+        # is a place where build steps will occur. By specifying docker, we are telling
+        # Circle that we want our build steps to take place inside of a Docker container.
+        # For comparison sake, if we were building an iOS application instead of a node.js
+        # application, we would replace 'docker' with macos. This would tell Circle that
+        # we want our tests to take place on a MacOS machines as opposed to a Docker image
+        docker:
+          - image: circleci/node:10.15.3
+        working_directory: ~/project
+        steps:
+          # checkout - a CircleCI built in command which is responsible for checking
+          # out the project's source code into the Job's working_directory we discussed above
+          - checkout
+          - run: npm install
+          - run: npm test
+  build-and-deploy:
+    jobs:
+      - aws-ecr/build_and_push_image:
+        repo: '${AWS_RESOURCE_NAME_PREFIX}'
+        tag: '${CIRCLE_SHA1}'
+      - aws-ecs/deploy-service-update:
+          requires:
+            - aws-ecr/build_and_push_image
+          family: 'basic-nodejs-app-service'
+          cluster: 'basic-nodejs-app-cluster'
 #what is the prupose of orbs:
 #what is the purpose of workflows:
 #what is the purpose of workflow
