[*] modifying workflow orbs buid-and-push-image

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,7 +31,13 @@ workflows:
   build-and-deploy:
     jobs:
       - aws-ecr/build_and_push_image:
+        account-url: '${AWS_ECR_ACCOUNT_URL}'
+        aws-access-key-id: '${AWS_ACCESS_KEY_ID}'
+        aws-secret-access-key: '${AWS_SECRET_ACCESS_KEY}'
+        dockerfile: 'Dockerfile'
+        path: ~/project
         repo: '${AWS_ECR_ACCOUNT_URL}' #checker ce qui est obligatoire
+        region: ${AWS_REGION}
       - aws-ecs/deploy-service-update:
           requires:
             - aws-ecr/build_and_push_image
