--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,7 +6,23 @@ version: 2
 orbs:
   aws-ecr: circleci/aws-ecr@6.7.1
   aws-ecs: circleci/aws-ecs@1.1.0
-
+workflows:
+  version: 2
+  build-and-deploy:
+    jobs:
+      - aws-ecr/build_and_push_image:
+        account-url: '${AWS_ECR_ACCOUNT_URL}'
+        aws-access-key-id: '${AWS_ACCESS_KEY_ID}'
+        aws-secret-access-key: '${AWS_SECRET_ACCESS_KEY}'
+        dockerfile: 'Dockerfile'
+        path: ~/project
+        repo: '${AWS_RESOURCE_NAME_PREFIX}' #checker ce qui est obligatoire
+        region: ${AWS_REGION}
+      # - aws-ecs/deploy-service-update:
+      #     requires:
+      #       - aws-ecr/build_and_push_image
+      #     family: 'basic-nodejs-app-service'
+      #     cluster: 'basic-nodejs-app-cluster'
 jobs:
   # The build section defines the name for the job. So in this case, the name of
   # the job is simply build
@@ -26,23 +42,6 @@ jobs:
       - checkout
       - run: npm install
       - run: npm test
-workflows:
-  version: 2
-  build-and-deploy:
-    jobs:
-      - aws-ecr/build_and_push_image:
-        account-url: '${AWS_ECR_ACCOUNT_URL}'
-        aws-access-key-id: '${AWS_ACCESS_KEY_ID}'
-        aws-secret-access-key: '${AWS_SECRET_ACCESS_KEY}'
-        dockerfile: 'Dockerfile'
-        path: ~/project
-        repo: '${AWS_ECR_ACCOUNT_URL}' #checker ce qui est obligatoire
-        region: ${AWS_REGION}
-      - aws-ecs/deploy-service-update:
-          requires:
-            - aws-ecr/build_and_push_image
-          family: 'basic-nodejs-app-service'
-          cluster: 'basic-nodejs-app-cluster'
 #how to know if it's syntaxically correct
 #how to know if
 #what is the prupose of orbs:
