--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,6 +18,7 @@ workflows:
         path: ~/project
         repo: '${AWS_RESOURCE_NAME_PREFIX}' #checker ce qui est obligatoire
         region: ${AWS_REGION}
+        tag: '${CIRCLE_SHA1'
       # - aws-ecs/deploy-service-update:
       #     requires:
       #       - aws-ecr/build_and_push_image
