--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,7 +15,7 @@ workflows:
         aws-access-key-id: '${AWS_ACCESS_KEY_ID}'
         aws-secret-access-key: '${AWS_SECRET_ACCESS_KEY}'
         dockerfile: 'Dockerfile'
-        path: ~/project
+        # path: ~/project
         repo: '${AWS_RESOURCE_NAME_PREFIX}' #checker ce qui est obligatoire
         region: ${AWS_REGION}
         tag: '${CIRCLE_SHA1'
