--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,13 +12,13 @@ workflows:
     jobs:
       - aws-ecr/build_and_push_image:
         account-url: '${AWS_ECR_ACCOUNT_URL}'
-        aws-access-key-id: '${AWS_ACCESS_KEY_ID}'
-        aws-secret-access-key: '${AWS_SECRET_ACCESS_KEY}'
-        dockerfile: 'Dockerfile'
+        # aws-access-key-id: '${AWS_ACCESS_KEY_ID}'
+        # aws-secret-access-key: '${AWS_SECRET_ACCESS_KEY}'
+        # dockerfile: 'Dockerfile'
         # path: ~/project
         repo: '${AWS_RESOURCE_NAME_PREFIX}' #checker ce qui est obligatoire
         region: ${AWS_REGION}
-        tag: '${CIRCLE_SHA1'
+        tag: '${CIRCLE_SHA1}'
       # - aws-ecs/deploy-service-update:
       #     requires:
       #       - aws-ecr/build_and_push_image
