--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,8 +17,8 @@ workflows:
         # dockerfile: 'Dockerfile'
         # path: ~/project
         repo: '${AWS_RESOURCE_NAME_PREFIX}' #checker ce qui est obligatoire
-        region: ${AWS_REGION}
-        tag: '${CIRCLE_SHA1}'
+        region: '${AWS_REGION}'
+        tag: '${CIRCLE_SHA1'
       # - aws-ecs/deploy-service-update:
       #     requires:
       #       - aws-ecr/build_and_push_image
