--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,7 +10,7 @@ version: 2.1
 workflows:
   build-and-deploy:
     jobs:
-      - aws-ecr.build-and-push-image:
+      - aws-ecr/build-and-push-image:
           account-url: '447414606764.dkr.ecr.eu-west-3.amazonaws.com'
           # aws-access-key-id: '${AWS_ACCESS_KEY_ID}'
           # aws-secret-access-key: '${AWS_SECRET_ACCESS_KEY}'
