--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,13 +11,13 @@ workflows:
   build-and-deploy:
     jobs:
       - aws-ecr/build-and-push-image:
-          account-url: '${AWS_ECR_ACCOUNT_URL}'
+          account-url: ${AWS_ECR_ACCOUNT_URL}
           # aws-access-key-id: '${AWS_ACCESS_KEY_ID}'
           # aws-secret-access-key: '${AWS_SECRET_ACCESS_KEY}'
           # dockerfile: 'Dockerfile'
           # path: ~/project
-          repo: '${AWS_RESOURCE_NAME_PREFIX}' #checker ce qui est obligatoire
-          region: '${AWS_REGION}'
+          repo: ${AWS_RESOURCE_NAME_PREFIX} #checker ce qui est obligatoire
+          region: ${AWS_REGION}
         # tag: '${CIRCLE_SHA1}'
       # - aws-ecs/deploy-service-update:
       #     requires:
