--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,6 +18,7 @@ workflows:
           # path: ~/project
           repo: 'basic-nodejs-app-ecr' #checker ce qui est obligatoire
           region: AWS_REGION_ENV_VAR_NAME
+          tag: 'latest,447414606764.dkr.ecr.eu-west-3.amazonaws.com/basic-nodejs-app-ecr'
         # tag: '${CIRCLE_SHA1}'
       # - aws-ecs/deploy-service-update:
       #     requires:
