--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,14 +18,11 @@ workflows:
           # path: ~/project
           repo: 'basic-nodejs-app-ecr' #checker ce qui est obligatoire
           region: AWS_REGION_ENV_VAR_NAME
-          #test
-          # tag: 'latest,447414606764.dkr.ecr.eu-west-3.amazonaws.com/basic-nodejs-app-ecr'
-        # tag: '${CIRCLE_SHA1}'
-      # - aws-ecs/deploy-service-update:
-      #     requires:
-      #       - aws-ecr/build_and_push_image
-      #     family: 'basic-nodejs-app-service'
-      #     cluster: 'basic-nodejs-app-cluster'
+      - aws-ecs/deploy-service-update:
+          requires:
+            - aws-ecr/build-and-push-image
+          family: 'basic-nodejs-app-service'
+          cluster: 'basic-nodejs-app-cluster'
 jobs:
   # The build section defines the name for the job. So in this case, the name of
   # the job is simply build
