--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,10 +12,10 @@ workflows:
     jobs:
       - aws-ecr/build-and-push-image:
           account-url: AWS_ECR_ACCOUNT_URL_ENV_VAR_NAME
-          # aws-access-key-id: '${AWS_ACCESS_KEY_ID}'
-          # aws-secret-access-key: '${AWS_SECRET_ACCESS_KEY}'
-          # dockerfile: 'Dockerfile'
-          # path: ~/project
+            aws-access-key-id: '${AWS_ACCESS_KEY_ID}'
+            aws-secret-access-key: '${AWS_SECRET_ACCESS_KEY}'
+            dockerfile: 'Dockerfile'
+            path: ~/project
           repo: 'basic-nodejs-app-ecr' #checker ce qui est obligatoire
           region: AWS_REGION
       - aws-ecs/deploy-service-update:
